# DSP-Tacotron2-Multispeaker

./: README.md  data_functions.py  inference.py  inference_perf.py  models.py  pyproject.toml  test_infer.py  train.py
tacotron2/: data_function.py  entrypoints.py  model.py
tacotron2_common/: utils.py
